syntax = "proto3";

package account_v1;

option go_package = "git.amocrm.ru/dmiroshnikov/unisender_integration/pkg/account_v1;account_v1";

service AccountService {
  rpc DeleteAccount(DeleteAccountRequest) returns (DeleteAccountResponse) {}
}

message DeleteAccountRequest {
  int32 account_id = 3;
}

message DeleteAccountResponse {
  bool success = 1;
}